# ICub_Optimization

./: README.md  ReadMe.txt  ReadMe.txt~  cost_eq.m  jac.mat  jacobian.mat
icub-opt/: CMakeLists.txt  test.cpp
icub-opt/include/: iCubOpt.hpp  iCubOpt.hpp~
icub-opt/src/: W_STATIC.cpp  iCubOpt.cpp
icub-sdfast/: README.md~
snopt/include/: snoptStructure.hpp
